[metadata]
name = ckanext-metaexport
version = 0.1.0
description =
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/DataShades/ckanext-metaexport
author = Sergey Motornyuk
author_email = sergey.motornyuk@linkdigital.com.au
license = AGPL
classifiers =
	    Development Status :: 4 - Beta
	    License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)
	    Programming Language :: Python :: 3.7
	    Programming Language :: Python :: 3.8
	    Programming Language :: Python :: 3.9
	    Programming Language :: Python :: 3.10
keywords =
	 CKAN

[options]
python_requires = >= 3.7
install_requires =
		 rdflib
		 ckantoolkit
		 geomet
		 pdfkit
packages = find:
namespace_packages = ckanext
include_package_data = True

[options.entry_points]
ckan.plugins =
	     metaexport = ckanext.metaexport.plugin:MetaexportPlugin
babel.extractors =
		 ckan = ckan.lib.extract:extract_ckan

[extract_messages]
keywords = translate isPlural
add_comments = TRANSLATORS:
output_file = ckanext/metaexport/i18n/ckanext-metaexport.pot
width = 80

[init_catalog]
domain = ckanext-metaexport
input_file = ckanext/metaexport/i18n/ckanext-metaexport.pot
output_dir = ckanext/metaexport/i18n

[update_catalog]
domain = ckanext-metaexport
input_file = ckanext/metaexport/i18n/ckanext-metaexport.pot
output_dir = ckanext/metaexport/i18n
previous = true

[compile_catalog]
domain = ckanext-metaexport
directory = ckanext/metaexport/i18n
statistics = true

[tool:pytest]
filterwarnings =
        ignore::sqlalchemy.exc.SADeprecationWarning
        ignore::sqlalchemy.exc.SAWarning
        ignore::DeprecationWarning

addopts = --ckan-ini test.ini
testpaths = ckanext/metaexport/tests
